# src/dashboard/apigateway/apigateway/biz/openapi/schemas/openapi_3.1_schema.json
@@ -534,6 +534,12 @@
                 },
                 "resourcePermissionRequired": {
                   "type": "boolean"
+                },
+                "oauth2PublicClientEnabled": {
+                  "type": "boolean"
+                },
+                "oauth2PersonalClientEnabled": {
+                  "type": "boolean"
                 }
               }
             },
