# src/dashboard/apigateway/apigateway/core/models.py
@@ -286,6 +286,8 @@ class Resource(TimestampedModelMixin, OperatorModelMixin):
 
     is_public = models.BooleanField(default=True)
     allow_apply_permission = models.BooleanField(default=True)
+    oauth2_public_client_enabled = models.BooleanField(default=False)
+    oauth2_personal_client_enabled = models.BooleanField(default=False)
 
     objects: ClassVar[managers.ResourceManager] = managers.ResourceManager()
 
